feat: add system configuration, rate limiting, caching, map integration, and error handling UI